[package]
name = "drogue-bluetooth-gateway"
version = "0.1.0"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
description = "Drogue IoT Bluetooth LE Gateway"

[dependencies]

dbus = "0.9.0"
log = "0.4.11"
env_logger = "0.8.2"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
